--- a/index.html
+++ b/index.html
@@ -88,9 +88,8 @@
               <div class="cardfront">
               </div>
               <div class="cardback">
-                <span id="name">wacky man</span><br><br>
-              
-                <span id="type" style="color: fuchsia; font-size: small;">playable</span><br>
+                <span id="name">wacky man</span><br><span id="type" style="color: fuchsia; font-size: small;">playable</span><br>
+                
                 <span><i style="color: greenyellow; padding-right: 10px;" class="fa-sharp fa-solid fa-plus"></i><span id="hp">100</span></span><br>
                 <span><i style="color: red; padding-right: 10px;" class="fa-sharp fa-solid fa-hand-fist"></i><span id="atk">3.0231</span></span><br>
                 <span><i style="color: cornflowerblue; padding-right: 10px;" class="fa-sharp fa-solid fa-shield"></i><span id="def">30%</span></span><br>
