--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
         <link rel="stylesheet" href="index.css">
         <link rel="stylesheet" href="universal.css">
         <script src="index.js"></script>
-        <script src="universal.js"></script>
+        <script src="universal.js" defer></script>
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
     <body>
         <button onclick="createRandomCard();">random</button>
-        
+
         <div class="container" id="container">
             
             </div>
