--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
     let type =   ['playable', 'immediate', 'interjection', 'action', 'utility'];
 
 function createRandomCard() {
-    let rarity = lists.rarity[Math.floor(Math.random() * (6 - 0 + 1) ) + 0];
-    let type = lists.type[Math.floor(Math.random() * (5 - 0 + 1) ) + 0];
+    let rarity = rarity[Math.floor(Math.random() * (6 - 0 + 1) ) + 0];
+    let type = type[Math.floor(Math.random() * (5 - 0 + 1) ) + 0];
 
     if (type != 'playable' || rarity == 'evil') {
         let desc = 'this would be a test string if i had one lmao\ndraw like, 11,054 cards.';
