--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <link rel="stylesheet" href="index.css">
         <link rel="stylesheet" href="universal.css">
         <script src="index.js"></script>
-        <script src="universal.js" defer></script>
+        <script src="universal.js"></script>
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
@@ -12,6 +12,6 @@
 
         <div class="container" id="container">
             
-            </div>
+        </div>
     </body>
 </html>
