--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
         <div class="container" id="container">
             <div id="containerappend"></div>
         </div>
+
+        <p>current version (made to assure no old code is used in prod): test 14 fix 4</p>
     </body>
 </html>
