--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
     <body>
-        <p style="color: black;">current version (made to assure no old code is used in prod): test 14 fix 6</p>
+        <div id="loggr"></div>
+        <p style="color: black;">current version (made to assure no old code is used in prod): test 15</p>
         <button onclick="createRandomCard();">random</button>
 
         <div class="container" id="container">
