--- a/index.html
+++ b/index.html
@@ -2,14 +2,12 @@
     <head>
         <link rel="stylesheet" href="index.css">
         <link rel="stylesheet" href="universal.css">
-        <script src="index.js"></script>
-        <script src="universal.js"></script>
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
     <body>
         <div id="loggr"></div>
-        <p style="color: black;">current version (made to assure no old code is used in prod): test 17</p>
+        <p style="color: black;">current version (made to assure no old code is used in prod): test 17 fix 1</p>
         <button onclick="createRandomCard();">random</button>
         <button onclick="getCardFromMemory('random');">random card from memory</button>
         <button onclick="getCardFromMemory('last');">last card from memory</button>
@@ -19,5 +17,8 @@
         <div class="container" id="container">
             <div id="containerappend"></div>
         </div>
+
+        <script src="index.js"></script>
+        <script src="universal.js"></script>
     </body>
 </html>
