--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div id="loggr"></div>
-        <p style="color: black;">current version (made to assure no old code is used in prod): test 18 fix 2</p>
+        <p style="color: black;">current version (made to assure no old code is used in prod): test 18 fix 3</p>
         <button onclick="CardManager.createRandomCard();">random</button>
         <button onclick="CardManager.getCardFromMemory('random');">random card from memory</button>
         <button onclick="CardManager.getCardFromMemory('last');">last card from memory</button>
@@ -22,6 +22,7 @@
         <script src="universal.js"></script>
 
         <script src="lib/chance.min.js"></script>
+        <script src="lib/largeArrays.js"></script>
         <script src="lib/jquery-1.10.1.min.js"></script>
     </body>
 </html>
